Add enrichment icon and grey copy of Twitter icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -372,6 +372,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-enrichment">
+      <use xlink:href="/svg-defs.svg#icon-enrichment"></use>
+    </svg>
+    <span class="icon-container-name">enrichment</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-expand">
       <use xlink:href="/svg-defs.svg#icon-expand"></use>
     </svg>
@@ -1069,6 +1076,13 @@
       <use xlink:href="/svg-defs.svg#icon-twitter"></use>
     </svg>
     <span class="icon-container-name">twitter</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-twitter-grey">
+      <use xlink:href="/svg-defs.svg#icon-twitter-grey"></use>
+    </svg>
+    <span class="icon-container-name">twitter-grey</span>
   </div>
 
   <div class="icon-container">
