Add go-radius icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -435,6 +435,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-go-radius">
+      <use xlink:href="/svg-defs.svg#icon-go-radius"></use>
+    </svg>
+    <span class="icon-container-name">go-radius</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-goal-radius">
       <use xlink:href="/svg-defs.svg#icon-goal-radius"></use>
     </svg>
