--- a/views/components/forms/general-inputs.html
+++ b/views/components/forms/general-inputs.html
@@ -10,3 +10,6 @@
     <option value="3">Option 3</option>
   </select>
 </div>
+<div class="input-base with-caret">
+  <input type="text" placeholder="text input with carret" />
+</div>
