--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -778,6 +778,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-order-by">
+      <use xlink:href="/svg-defs.svg#icon-order-by"></use>
+    </svg>
+    <span class="icon-container-name">order-by</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-pause">
       <use xlink:href="/svg-defs.svg#icon-pause"></use>
     </svg>
