--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -36,6 +36,20 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-arrow-left">
+      <use xlink:href="/svg-defs.svg#icon-arrow-left"></use>
+    </svg>
+    <span class="icon-container-name">arrow-left</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-arrow-right">
+      <use xlink:href="/svg-defs.svg#icon-arrow-right"></use>
+    </svg>
+    <span class="icon-container-name">arrow-right</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-at">
       <use xlink:href="/svg-defs.svg#icon-at"></use>
     </svg>
