--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -59,7 +59,7 @@ This library is divided in the following sections:
 @import "objects/media";
 @import "objects/menus";
 @import "objects/nav";
-// @import "objects/pagination";
+@import "objects/pagination";
 @import "objects/panel";
 @import "objects/card-monitoring";
 @import "objects/sprites";
