Add connect icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -267,6 +267,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-connect">
+      <use xlink:href="/svg-defs.svg#icon-connect"></use>
+    </svg>
+    <span class="icon-container-name">connect</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-content">
       <use xlink:href="/svg-defs.svg#icon-content"></use>
     </svg>
