Up and down arrows

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -36,6 +36,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-arrow-down">
+      <use xlink:href="/svg-defs.svg#icon-arrow-down"></use>
+    </svg>
+    <span class="icon-container-name">arrow-down</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-arrow-left">
       <use xlink:href="/svg-defs.svg#icon-arrow-left"></use>
     </svg>
@@ -47,6 +54,13 @@
       <use xlink:href="/svg-defs.svg#icon-arrow-right"></use>
     </svg>
     <span class="icon-container-name">arrow-right</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-arrow-up">
+      <use xlink:href="/svg-defs.svg#icon-arrow-up"></use>
+    </svg>
+    <span class="icon-container-name">arrow-up</span>
   </div>
 
   <div class="icon-container">
