Add network icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1245,4 +1245,11 @@
     </svg>
     <span class="icon-container-name">world</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-network">
+      <use xlink:href="/svg-defs.svg#icon-network"></use>
+    </svg>
+    <span class="icon-container-name">network</span>
+  </div>
 </div>
