--- a/views/components/pagination/default.html
+++ b/views/components/pagination/default.html
@@ -1,9 +1,21 @@
 <ul class="pagination">
-  <li class="pagination-item"><a class="pagination-prev" href="#">prev</a></li>
+  <li class="pagination-item">
+    <a class="pagination-prev" href="#">
+      <svg class="icon icon-size-14">
+        <use xlink:href="/svg-defs.svg#icon-arrow-down"></use>
+      </svg>
+    </a>
+  </li>
   <li class="pagination-item"><a class="pagination-link" href="#">1</a></li>
   <li class="pagination-item"><a class="pagination-link" href="#">2</a></li>
   <li class="pagination-item"><a class="pagination-link is-active" href="#">3</a></li>
   <li class="pagination-item"><a class="pagination-link" href="#">4</a></li>
   <li class="pagination-item"><a class="pagination-link" href="#">5</a></li>
-  <li class="pagination-item"><a class="pagination-next" href="#">next</a></li>
+  <li class="pagination-item">
+    <a class="pagination-next" href="#">
+      <svg class="icon icon-size-14">
+        <use xlink:href="/svg-defs.svg#icon-arrow-up"></use>
+      </svg>
+    </a>
+  </li>
 </ul>
