Add video-camera and picture icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -778,6 +778,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-network">
+      <use xlink:href="/svg-defs.svg#icon-network"></use>
+    </svg>
+    <span class="icon-container-name">network</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-nimble">
       <use xlink:href="/svg-defs.svg#icon-nimble"></use>
     </svg>
@@ -845,6 +852,13 @@
       <use xlink:href="/svg-defs.svg#icon-personality"></use>
     </svg>
     <span class="icon-container-name">personality</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-picture">
+      <use xlink:href="/svg-defs.svg#icon-picture"></use>
+    </svg>
+    <span class="icon-container-name">picture</span>
   </div>
 
   <div class="icon-container">
@@ -1205,24 +1219,17 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-xls">
-      <use xlink:href="/svg-defs.svg#icon-xls"></use>
-    </svg>
-    <span class="icon-container-name">xls</span>
-  </div>
-
-  <div class="icon-container">
-    <svg class="icon-xls-2">
-      <use xlink:href="/svg-defs.svg#icon-xls-2"></use>
-    </svg>
-    <span class="icon-container-name">xls-2</span>
-  </div>
-
-  <div class="icon-container">
     <svg class="icon-verified">
       <use xlink:href="/svg-defs.svg#icon-verified"></use>
     </svg>
     <span class="icon-container-name">verified</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-video-camera">
+      <use xlink:href="/svg-defs.svg#icon-video-camera"></use>
+    </svg>
+    <span class="icon-container-name">video-camera</span>
   </div>
 
   <div class="icon-container">
@@ -1247,9 +1254,17 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-network">
-      <use xlink:href="/svg-defs.svg#icon-network"></use>
+    <svg class="icon-xls">
+      <use xlink:href="/svg-defs.svg#icon-xls"></use>
     </svg>
-    <span class="icon-container-name">network</span>
+    <span class="icon-container-name">xls</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-xls-2">
+      <use xlink:href="/svg-defs.svg#icon-xls-2"></use>
+    </svg>
+    <span class="icon-container-name">xls-2</span>
+  </div>
+
 </div>
