Add emojis icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -393,6 +393,41 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-emoji-happy-1">
+      <use xlink:href="/svg-defs.svg#icon-emoji-happy-1"></use>
+    </svg>
+    <span class="icon-container-name">emoji-happy-1</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-emoji-happy-2">
+      <use xlink:href="/svg-defs.svg#icon-emoji-happy-2"></use>
+    </svg>
+    <span class="icon-container-name">emoji-happy-2</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-emoji-neutral">
+      <use xlink:href="/svg-defs.svg#icon-emoji-neutral"></use>
+    </svg>
+    <span class="icon-container-name">emoji-neutral</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-emoji-sad-1">
+      <use xlink:href="/svg-defs.svg#icon-emoji-sad-1"></use>
+    </svg>
+    <span class="icon-container-name">emoji-sad-1</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-emoji-sad-2">
+      <use xlink:href="/svg-defs.svg#icon-emoji-sad-2"></use>
+    </svg>
+    <span class="icon-container-name">emoji-sad-2</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-engagement">
       <use xlink:href="/svg-defs.svg#icon-engagement"></use>
     </svg>
