add products icon to icon list

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -939,6 +939,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-products">
+      <use xlink:href="/svg-defs.svg#icon-products"></use>
+    </svg>
+    <span class="icon-container-name">products</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-profile-information">
       <use xlink:href="/svg-defs.svg#icon-profile-information"></use>
     </svg>
