Added cart icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1358,4 +1358,11 @@
     <span class="icon-container-name">xls-2</span>
   </div>
 
+  <div class="icon-container">
+    <svg class="icon-cart">
+      <use xlink:href="/svg-defs.svg#icon-cart"></use>
+    </svg>
+    <span class="icon-container-name">cart</span>
+  </div>
+
 </div>
