--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1365,4 +1365,38 @@
     <span class="icon-container-name">cart</span>
   </div>
 
+  <div class="icon-container">
+    <svg class="icon-feedback">
+      <use xlink:href="/svg-defs.svg#icon-feedback"></use>
+    </svg>
+    <span class="icon-container-name">feedback</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-notifications">
+      <use xlink:href="/svg-defs.svg#icon-notifications"></use>
+    </svg>
+    <span class="icon-container-name">notifications</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-tweet-editor-2">
+      <use xlink:href="/svg-defs.svg#icon-tweet-editor-2"></use>
+    </svg>
+    <span class="icon-container-name">tweet-editor-2</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-settings">
+      <use xlink:href="/svg-defs.svg#icon-settings"></use>
+    </svg>
+    <span class="icon-container-name">settings</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-products-2">
+      <use xlink:href="/svg-defs.svg#icon-products-2"></use>
+    </svg>
+    <span class="icon-container-name">products-2</span>
+  </div>
 </div>
